@@ -98,6 +98,7 @@ export("+.section",
        "latitude<-",
        latlonFormat,
        loggerToc,
+       lonlat2utm,
        lonFormat,
        longitude,
        "longitude<-",
@@ -282,6 +283,7 @@ export("+.section",
        webtide,
        window.oce,
        write.ctd,
+       utm2lonlat,
        xyzToEnu,
        xyzToEnuAdp,
        xyzToEnuAdv)
